# RF-DETR-ONNX

./: .gitignore  LICENSE  README.md  export.py  inference.py  pyproject.toml  rfdetr_onnx.py
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/cmake/: common.cmake
cpp/src/: CMakeLists.txt
cpp/tests/: CMakeLists.txt
python/: inference.py  prepare_models.py  pyproject.toml  run_validation.sh
python/modules/: export.py  export_roboflow.py  model.py  onnx_runtime.py  utils.py
python/tests/: conftest.py  generate_onnx_results.py  generate_torch_results.py  prepare_models.py  reporting.py  test_model.py  test_val.py
python/tests/test_results/: drone_onnx.json  drone_torch.json  summary_report.json  summary_report.md
src/: model.py  onnx_runtime.py
tests/: test_val.py
