[project]
name = "rf-detr-onnx"
version = "0.1.0"
description = "Scripts to use ONNX version of FR-DETR"
readme = "README.MD"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "onnxruntime>1.17",
    "pillow"
]

[project.optional-dependencies]
export-tools = ["rfdetr==1.4.0", "onnx==1.19.0", "onnxsim==0.4.36", "onnxscript", "torch==2.8.0"]
